--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,12 @@
 {
-	"useTabs": true,
+	"useTabs": false,
+	"tabWidth": 2,
+	"semi": true,
 	"singleQuote": true,
 	"trailingComma": "none",
-	"printWidth": 100,
+	"printWidth": 80,
+	"bracketSameLine": false,
+	"singleAttributePerLine": true,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
