Added first entry to cache

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "lib": ["WebWorker"]
+    "lib": ["WebWorker"],
+    "types": [
+      "vite-plugin-pwa/client",
+      "vite-plugin-pwa/info"
+    ]
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
   //
