Finished generating/caching/reloading strategy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,7 @@
     "sourceMap": true,
     "strict": true,
     "lib": ["WebWorker"],
-    "types": [
-      "vite-plugin-pwa/client",
-      "vite-plugin-pwa/info"
-    ]
+    "types": ["vite-plugin-pwa/client", "vite-plugin-pwa/info"]
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
   //
