--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vite-pwa/sveltekit": "^0.2.5",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "postcss": "^8.4.27",
+    "postcss-load-config": "^4.0.1",
+    "postcss-nested": "^6.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
     "sass": "^1.63.6",
