--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "vite": "^4.3.6",
     "vitest": "^0.32.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@davidwells/postcss-math": "^1.0.3"
+  }
 }
