--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "@vite-pwa/sveltekit": "^0.2.5",
     "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
