--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,18 @@
   "singleAttributePerLine": true,
   "plugins": ["prettier-plugin-svelte"],
   "pluginSearchDirs": ["."],
-  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    },
+    {
+      "files": "*.postcss",
+      "options": {
+        "parser": "css"
+      }
+    }
+  ]
 }
