Greatly improved rolling digit animations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,13 @@
     "Cacher",
     "chems",
     "Criticals",
+    "cssnano",
+    "davidwells",
     "dramp",
     "Exclnt",
     "Fixit",
     "Flameboy",
+    "gsap",
     "Hander",
     "jsmath",
     "Knockback",
@@ -20,6 +23,8 @@
     "miniguns",
     "Nuka",
     "Outdoorsman",
+    "pcss",
+    "popmotion",
     "Radaway",
     "Saira",
     "Snakeater",
