--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@davidwells/postcss-math": "^1.0.3"
+    "@davidwells/postcss-math": "^1.0.3",
+    "gsap": "^3.12.2"
   }
 }
