--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "type": "module",
   "dependencies": {
     "@davidwells/postcss-math": "^1.0.3",
-    "gsap": "^3.12.2"
+    "gsap": "^3.12.2",
+    "tsafe": "^1.6.4"
   }
 }
