--- a/package.json
+++ b/package.json
@@ -38,12 +38,10 @@
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.6",
-    "vitest": "^0.32.2"
-  },
-  "type": "module",
-  "dependencies": {
+    "vitest": "^0.32.2",
     "@davidwells/postcss-math": "^1.0.3",
     "gsap": "^3.12.2",
     "tsafe": "^1.6.4"
-  }
+  },
+  "type": "module"
 }
