--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:unit": "vitest"
   },
   "devDependencies": {
+    "@davidwells/postcss-math": "^1.0.3",
     "@faker-js/faker": "^8.0.2",
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^2.0.0",
@@ -35,13 +36,11 @@
     "prettier-plugin-svelte": "^2.10.1",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.6",
+    "tsafe": "^1.6.4",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.6",
-    "vitest": "^0.32.2",
-    "@davidwells/postcss-math": "^1.0.3",
-    "gsap": "^3.12.2",
-    "tsafe": "^1.6.4"
+    "vitest": "^0.32.2"
   },
   "type": "module"
 }
