just a little scrubbing

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "NWCP",
-  "name": "VaultDweller Character Planner",
+  "name": "Nuclear Wasteland Character Planner",
   "start_url": "/",
   "icons": [
     {
