--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "vite": "^4.3.6",
     "vitest": "^0.32.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "postcss-for": "^2.1.1"
+  }
 }
