--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
+    "test": "npm run test:unit #npm run test:integration && ",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint . && svelte-check",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "full-check": "npm run format && npm run lint && npm run check && npm run test",
     "format": "prettier --plugin-search-dir . --write .",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test:unit": "vitest run",
+    "release": "npm run full-check && npm run build && zip -r nwcp-release-`git describe --always HEAD`.zip nwcp"
   },
   "devDependencies": {
     "@davidwells/postcss-math": "^1.0.3",
