--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,9 +4,14 @@
   "start_url": "/",
   "icons": [
     {
+      "src": "favicon.ico",
+      "type": "image/vnd.microsoft.icon",
+      "sizes": "16x16 24x24 32x32 64x64"
+    },
+    {
       "src": "nwcp.svg",
       "type": "image/svg+xml",
-      "sizes": "150x150"
+      "sizes": "16x16 24x24 32x32 64x64 150x150 192x192 256x256"
     }
   ],
   "background_color": "#383020",
