--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "vite build && rm -f nwcp/*test.html",
     "preview": "vite preview",
     "test": "npm run test:unit #npm run test:integration && ",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
